css/master.css
/* ... */
.current_menu_item {
    background: url(../i/mm-logo.png) no-repeat 3% 50%;
    background-size: 30px;
}
.other_menu_item {
    background: none;
}
.toggle-header-open {
    border-bottom-left-radius: 0px;
    border-bottom-right-radius: 0px;
}

.toggle_menu_item {
    position: absolute;
    top: 39px;
    width: 221px;
    padding: 2px 0px;
    height: 33px;
    border-bottom: 1px solid #bfbfbf;
    border-left: 1px solid #bfbfbf;
    border-right: 1px solid #bfbfbf;
    border-bottom-left-radius: 2px;
    border-bottom-right-radius: 2px;
    z-index: 10;
}

.toggle_menu_item:hover {

}



.toggle_item_text {
    position: absolute;
    margin-left: 44px;
    margin-top: 3px;
}
.clear_filters {
    width: 20px;
    height: 20px;
    float: left;
    margin-left: 12px;
    margin-top: 1.5px;
    text-align: center;
    color: #ccc;
    border: 1px solid #ccc;
    border-radius: 2px;
    cursor: pointer;
}
.clear_filters:hover {
    color: #d11d1d;
    border: 1px solid #d11d1d;
}
#map-con{
	height: 400px;
}
.bmap{
	font-size: 13px;
}
.mapoverlay{
	position: absolute;
	left:0px;
	right:0px;
	margin-left: 20px;
    height: 0px;
}
.controlls{
	height: 270px;
	border-radius: 2rem;
	position: relative;
}
	.timeline{
		margin-top: 45px;
		height: 205px;
		border-bottom: 1px solid #ccc;
		border-width: 1px 0px;
	}
    .select_line{
        stroke: #eee;
        /*stroke: url(select_line.png) repeat-x;*/
        stroke-width: 4;
    }
    .no_select_line{
        stroke: #CCCCCC;
        stroke-width: 4;
    }
		.scroll_marker{
			position: absolute;
			margin-top: -6px;
			z-index: 3;
			top:0px;
			}
		.scroll_marker img {
			width: 50px;
			margin-left: 0px;
		}
	.timeline .tl_text_mark{
		position: absolute;
	}
	.timeline .just_text_of_mark{
		margin-left: -2px;
		font-size: 12px;
	}
	.timeline .mark_top{
		top: 17px;
		}
	.timeline .mark_top .just_text_of_mark{
		font-size: 9px;
		color: #9c9c9c;
		}
	.timeline .mark_bottom .just_text_of_mark{
		font-size: 13px;
		}
	.timeline .mark_bottom{
		top: 0px;
		}

	.timeline .last_mark .just_text_of_mark{
		position: absolute;
		right:0px;
		margin-left: 0px;
		}
		.timeline .mark_bottom.last_mark .just_text_of_mark{
			top:0px;
			
		}
    .timeline_black_text {
        background: #000;
        color: #fff;
        padding: 8px 17px 8px 17px;
    }
    .timeline_white_text {
        background: #fff;
        color: #000;
        font-size: 26px;
        font-weight: bold;
        padding: 6px 17px 5px 17px;
    }
    .timeline_yellow_text {
        background: #f0f060;
        padding: 8px 17px 7px 17px;
    }
	.big_timemarks{
		margin-top: 20px;
		position: relative;
		display: none;
	}

.timeline_text {
    position: absolute;
    color: #aaa;
    width: 100px;
    font-size: 13px;
}
.current_time {
	color: #fd0f3a;
    position: absolute;
    top: 0;
    font-size: 13px;
    z-index: 50;
}
.start_text {
    top: 10px;
    left: 0px;
}
.finish_text {
    top: 10px;
    right: 0px;
    text-align: right;
}
.winner_text {
    padding-top: 10px;
    height: 100%;
}
.winner_info_man, .winner_info_woman {
    position: absolute;
    width: 100px;
}
.winner_info_man span, .winner_info_woman span{
    background: rgba(255,255,255,0.7);
}
.winner_info_man{
    top: 47%;
    padding-top: 29px;
}
.winner_info_woman {
    top: 10%;
    padding-top: 29px;
}

.big_block{
	margin: 0 20px;
	}
.controlls svg {
	margin: 29px 0 0 0;
}
.big_block .no_select_line {
	display: none;
}
.factoids{
		position: absolute;
		top:0px;
		left:0px;
		/*display: none;*/
	}
	.factoid{
		position: absolute;
	}
	.hidden{
		display: none;
	}
    .hidden_opacity{
        opacity: 0;
    }
	.factoid{

		}
		.factoid_h{
			font-family: Arial Black;
			font-size: 16px;
			font-weight: 100;
			}
		.factoid_d{
			font-size: 13px;
			}
		.factoid_img{
			margin-bottom:5px;

		}
        .factoid_img_left{
            margin-right: 15px;
            float: left;
        }
        .factoid_img_msu {
			height: 105px;
			margin-left: 99px;
			margin-top: -44px;
        }

.timemark{
	margin-top: 5px;
	position: absolute;
	}
	.timemark_t{
		font-size: 18px;
		font-weight: 700;
		}
	.timemark_d{
		font-size: 13px;
		}
.controlls_desc{
	top:128px;

	position: absolute;
	}
	.controlls_desc_h{
		font-size: 23px;
		line-height: 28px;
	}
	.controlls_desc_i{
		font-size: 23px;
		line-height: 28px;
	}



.main_header{
	padding-top: 20px;
	float:left;
	width:100%;
	}
.bmap_etc{
	float:right;
	width: 260px;
	/*padding-top: 140px;*/
	overflow: hidden;
	margin-right: 20px;
	}
    .lang {
        position: absolute;
        margin-right: 20px;
        z-index:100;
        top: 20px;
        right: 4px;

    }
    .flag_con {
        position: relative;
        float: left;
        width: 98px;
        margin-top: 10px;

    }
    .flag_con img {
    	height: 20px;
    }

    .left_flag {
        position: absolute;
        left: 0px;

    }
    .right_flag {
        position: absolute;
        right: 0px;
    }
    .inactive_flag_bw:hover {
        opacity: 0;
    }
    .inactive_flag_clr {
        float: left;
        opacity: 0;
    }
    .inactive_flag_clr:hover {
        opacity: 1;
    }
    .img_flag {
        margin-left: 5px;
        margin-top: 5px;
    }
	.weather {
		/*position: absolute;*/
		z-index: 1;
		/*right:1px;
		top: 44px;*/
		text-align: center;
		width: inherit;
		background: no-repeat 50% 50%;
		}

		.weather_images{
			/*height: 112px;*/
		}

		.weather_images img{
			width: 155px;
			/*max-width: 90%;
			max-height: 90%;*/
		}

		.we_temperature{
			font-size: 22px;
			font-weight: 700;
			/*margin-top: -40px;*/
			text-align: left;
			vertical-align: 71px;
			width: 46px;
			/*margin-left: 15px;*/
		}
		.we_wind{
			font-size: 13px;
			font-weight: 100;
			text-align: right;
			/*margin-right: 24px;*/
			/*margin-top: -24px;*/
			width: 50px;
			vertical-align: 71px;
		}
/* ... */

